--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -1,5 +1,5 @@
 .user-component {
-    display: flex;
+    justify-content: space-between;
 }
 
 .user-component,
@@ -24,4 +24,24 @@
     margin-top: 5px;
     font-size: 17px;
     color: rgba(0, 0, 0, 0.5);
+}
+
+.user-component__avatar--xl {
+    width: 80px;
+    height: 80px;
+}
+
+.user-component__avatar--sm {
+    width: 60px;
+    height: 60px;
+    border-radius: 25px;
+}
+
+
+.user-component__title--not-bold {
+    font-weight: 400;
+}
+
+.user-component__column {
+    color:rgba(0, 0, 0, 0.5);
 }
