--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -3,6 +3,7 @@
     justify-content: space-between;
     align-items: center;
     padding: var(--horizontal-space);
+    margin-bottom: 15px;
 }
 
 .screen-header__title {
@@ -10,6 +11,25 @@
     font-weight: 600;
 }
 
+.screen-header__icons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .screen-header__icons span{
     margin-left: 25px;
+}
+
+.screen-header__notification {
+    position: absolute;
+    top: 40px;
+    right: 18px;
+    background-color: tomato;
+    width: 8px;
+    height: 8px;
+    border-radius: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
