--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,12 @@
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
 @import "components/user-component.css";
+@import "components/badge.css";
 
 /* Screens */
 @import "screens/login.css";
 @import "screens/friends.css";
+@import "screens/find.css";
 
 body {
     color: #2e363e;
@@ -20,4 +22,6 @@ body {
 
 .main-screen {
     padding: 0px var(--horizontal-space);
+    padding-bottom: 80px;
+
 }
