--- a/css/screens/more.css
+++ b/css/screens/more.css
@@ -3,11 +3,43 @@
 }
 
 .more-suggestions {
-    
     border-top: var(--main-border);
     padding-top: 40px;
 }
 
 .more-suggestions__title {
     margin-bottom: 30px;
+}
+.more-suggestions__icons {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.more-suggestions__icon {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 40px;
+    width: 25%;
+    box-sizing: border-box;
+}
+
+.more-suggestions__icon span{
+    margin-top: 18px;
+    font-size: 11px;
+}
+
+.more-suggestions__icon-image {
+    width: 60px;
+    height: 60px;
+    background-color: var(--yellow);
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.more-suggestions__icon-image i {
+    font-size: 32px;
+    color: white;
 }
