--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -33,3 +33,16 @@
     justify-content: center;
     align-items: center;
 }
+
+@keyframes rotateGear {
+    from {
+        transform: none;
+    }
+    to {
+        transform: rotateZ(360deg);
+    }
+}
+
+.screen-header__icons .fa-gear:hover {
+    animation: rotateGear 1s linear infinite;
+}
