--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -108,3 +108,24 @@
 .open-post__heart-count span {
     margin-left: 3px;
 }
+
+@keyframes heartBeat {
+    0% {
+        color: white;
+        transform: none;
+    }
+    50% {
+        color: tomato;
+        transform: scale(1.5);
+    }
+    100% {
+        color: white;
+        transform: none;
+    }
+}
+
+.open-post__heart-count:hover i {
+    /* 애니메이션 가속화 -> 하트의 움직임을 좀 더 부드럽게 만들어 줌 */
+    will-change: transform;
+    animation: heartBeat 1s linear infinite;
+}
